<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nurse5"
    android:orientation="vertical"
    tools:context=".activities.NewNurseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pleaase_enter_the_following"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textWebPassword"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_nurse_activity_id_number"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:background="@android:color/transparent"
            android:text="@string/new_nurse_activity_button_login" />

        <TextView
            android:id="@+id/new_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_nurse_registration"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_gravity="center"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:indeterminate="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/if_member"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

</LinearLayout>